fix flicker

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,56 +2,3 @@
     height: 100%;
     width: 100%;
 }
-
-.gallery {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
-
-.cards {
-    width: 14rem;
-    height: 18rem;
-    transform: translate(-50%, -50%);
-}
-
-.cards li {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    width: 14rem;
-    height: 18rem;
-    text-align: center;
-    line-height: 18rem;
-    font-size: 2rem;
-    font-family: sans-serif;
-    background-color: #9d7cce;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 0.8rem;
-}
-
-.actions {
-    position: absolute;
-    bottom: 25px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.image {
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-}
-
-.section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
