--- a/styles/Overlay.module.css
+++ b/styles/Overlay.module.css
@@ -9,6 +9,7 @@
     width: 100vw;
     justify-content: space-around;
     padding-bottom: 1rem;
+    opacity: 0;
 }
 
 .navitems {
